# hackathon2_phase_2

./: .env.example  .gitignore  README.md
.claude/agents/: architecture-planner.md  database-engineer.md  fastapi-backend-engineer.md  frontend-engineer.md  integration-tester.md  spec-writer.md
.claude/fastapi/: skills.md
.claude/next.js/: skills.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py
backend/app/models/: __init__.py  task.py
backend/app/routes/: __init__.py  health.py  tasks.py
backend/app/utils/: __init__.py  exceptions.py
backend/tests/: __init__.py  conftest.py  test_auth_dependencies.py  test_config.py  test_database.py  test_jwt.py  test_task_model.py  test_tasks.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/tasks/: page.tsx
frontend/app/dashboard/tasks/[id]/: DeleteTaskButton.tsx  ToggleCompleteButton.tsx  page.tsx
frontend/app/dashboard/tasks/[id]/edit/: page.tsx
frontend/app/dashboard/tasks/new/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/tasks/: TaskCard.tsx  TaskForm.tsx  TaskList.tsx
frontend/components/ui/: button.tsx  dialog.tsx  input.tsx  spinner.tsx  textarea.tsx
history/prompts/task-crud/: 001-build-nextjs-frontend.green.prompt.md
specs/task-crud/: plan.md  spec.md  tasks.md
